preliminary xtaf driver (read only)

--- a/libxenon/ports/xenon/Makefile
+++ b/libxenon/ports/xenon/Makefile
@@ -111,7 +111,8 @@ LIBOBJS = crti.o crtn.o \
 	../../drivers/lwip/xenon/netif/enet.o \
 	../../drivers/network/network.o\
 	../../drivers/elf/elf.o \
-	../../drivers/elf/elf_run.o
+	../../drivers/elf/elf_run.o \
+	../../drivers/xtaf/xtaf.o
 
 
 # Build rules
